# cpp-parallel

./: .gitlab-ci.yml  CMakeLists.txt
src/parallel_executor/: CMakeLists.txt  DataEvent.h  DeviceA.h  DeviceB.h  EventQueue.h  Parser.h  StartedEvent.h  WorkDoneEvent.h  main.cpp
test/: CMakeLists.txt
